...
        title = "Property Search"
        viewModel = PropertyListViewModel(tableView: tableView)
        let sortButton = UIBarButtonItem(image: UIImage(systemName: "arrow.up.arrow.down"),
                                                            style: .plain,
                                                            target: self,
                                                            action: #selector(actionSort))
        sortButton.accessibilityIdentifier = "acid_propertyList_sort"
        navigationItem.rightBarButtonItem = sortButton
        navigationController?.navigationBar.tintColor = .label
        configureTableview()
    }

    private func configureTableview() {
...
